<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Xue</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Study Tool</string>
    <string name="ecButtonLabel">English - Chinese</string>
    <string name="ceButtonLabel">Chinese - English</string>
    <string name="exitButtonLabel">Exit</string>
    <string name="show">show</string>
    <string name="okay">okay</string>
    <string name="undo">undo</string>
    <string name="title_CEActivity">Chinese-English Trainer</string>
    <string name="quit">Confirm quit</string>
    <string name="reallyQuit">Quit and lose all progress on current deck?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="settingsUpdate">Update</string>
    <string name="button_settings_text">Settings</string>
    <string name="shared_settings_key">SHARED_SETTINGS_KEY</string>
    <string name="file_version_id">file_version</string>
    <string name="general_setting_header_text">General Settings</string>
    <string name="audio_setting_text">Audio Feedback:\u0020</string>
    <string name="deck_size_text">Deck Size:\u0020</string>
    <string name="audio_state_on_off">audio_on_off</string>
    <string name="deck_size_ec_key">deck_size_ec_key</string>
    <string name="deck_size_ce_key">deck_size_ce_key</string>
    <string name="sendReport">Send Report</string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comment</string>
    <string name="reportDialog">Please describe the error on this card. </string>
    <string name="audio_header">Audio</string>
    <string name="english_chinese_header_text">English-Chinese Settings</string>
    <string name="chinese_english_header_text">Chinese-English Settings</string>
    <string name="target_explain_text">Max Learning Set:\u0020</string>
    <string name="target_text">Max Learning Set</string>
    <string name="target_hint">This sets the maximum size of the pool of cards you are currently learning.  The default is 700.</string>
    <string name="target_ec">target_ec</string>
    <string name="target_ce">target_ce</string>
    <string name="title_activity_stat">StatActivity</string>
    <string name="action_settings">Settings</string>
    <string name="stat_header_text">User Statistics</string>
    <string name="last_deck_date_text_title">Last Deck Completed:</string>
    <string name="level_counts_title">Level Counts:</string>
    <string name="weekly_progress_title">Weekly Progress:</string>
    <string name="menu_stats">Statistics</string>
    <string name="invalid_log">You have not completed a deck yet.</string>
    <string name="no_progress">You have not made progress this week.</string>
    <string name="na">N/A</string>
    <string name="english_chinese_statistics_text">English - Chinese Statistics</string>
    <string name="chinese_english_statistics_text">Chinese - English Statistics</string>
    <string name="level_hint">The level represents your familiarity with a card.  A level 0 card is a never-before-seen card, while a level 4 card is a card you are most familiar with.  Get cards correct as they first appear in a deck in order to increase your level of familarity.  If your familiarity with a card reaches level 2, then it is considered learned. </string>

</resources>