<com.MeadowEast.xue.LearnLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LearnLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/promptTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textIsSelectable="true"
        android:textSize="40sp"
        tools:context=".MainActivity" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:ems="10"
        android:gravity="center"
        android:textIsSelectable="true"
        android:textSize="40sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/otherTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:ems="3"
        android:gravity="center"
        android:textIsSelectable="true"
        android:textSize="40sp" />



    <LinearLayout
        android:id="@+id/controlLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/advanceButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/show"
            android:textSize="20sp" />

        <Button
            android:id="@+id/okayButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/okay"
            android:textSize="20sp" />

        <Button
            android:id="@+id/undoButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/undo"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:gravity="center"
        android:textSize="30sp" />

</com.MeadowEast.xue.LearnLinearLayout>