<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:columnCount="2"
	    android:orientation="vertical"
	    android:rowCount="8" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/audio_settings_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/audio_setting_text"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="26sp" />
	
	        <ToggleButton
	            android:id="@+id/audio_on_off_button"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:textSize="26sp" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/English_Chinese_Header"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/english_chinese_header_text"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textSize="28sp"
	            android:textStyle="bold" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/deck_size_text"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:gravity="center_vertical|fill_horizontal"
	            android:text="@string/deck_size_text"
	            android:textSize="30sp" />
	
	        <NumberPicker
	            android:id="@+id/deck_size_picker"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/target_text1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/target_explain_text"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />

	        <EditText
	            android:id="@+id/target_ec_field"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="number"
	            android:maxLines="3" >

	            <requestFocus />
	        </EditText>

	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

	        <TextView
	            android:id="@+id/target_hint1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/target_hint"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/chinese_english_header"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/chinese_english_header_text"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textSize="28sp"
	            android:textStyle="bold" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView01"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_vertical|fill_horizontal"
	            android:text="@string/deck_size_text"
	            android:textSize="30sp" />
	
	        <NumberPicker
	            android:id="@+id/ce_deck_size_picker"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.34" />
	
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/target_text2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/target_explain_text"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />

	        <EditText
	            android:id="@+id/target_ce_field"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="number"
	            android:maxLines="3" />

	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

	        <EditText
	            android:id="@+id/target_hint2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:text="@string/target_hint" />

	    </LinearLayout>

	</LinearLayout>
</ScrollView>

