<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StatActivity" >

    <TextView
        android:id="@+id/statistics_header_ec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_header_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/last_deck_text_ec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/statistics_header_ec"
        android:layout_below="@+id/statistics_header_ec"
        android:layout_marginTop="47dp"
        android:text="@string/last_deck_date_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/level_count_text_ec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/statistics_header_ec"
        android:layout_below="@+id/last_deck_text_ec"
        android:text="Level Count:"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/weekly_progress_text_ec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/statistics_header_ec"
        android:layout_below="@+id/level_count_text_ec"
        android:text="Weekly Progress Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/English_Chinese_Header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_deck_text_ec"
        android:layout_below="@+id/statistics_header_ec"
        android:layout_marginTop="14dp"
        android:text="@string/english_chinese_header_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/chinese_english_header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/weekly_progress_text_ec"
        android:layout_below="@+id/weekly_progress_text_ec"
        android:layout_marginTop="14dp"
        android:text="@string/chinese_english_header_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/last_deck_text_ce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chinese_english_header2"
        android:layout_centerVertical="true"
        android:text="Last deck completed:"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/level_count_text_ce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_deck_text_ce"
        android:layout_below="@+id/last_deck_text_ce"
        android:layout_marginTop="16dp"
        android:text="Level Count"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/weekly_progress_text_ce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/level_count_text_ce"
        android:layout_below="@+id/level_count_text_ce"
        android:layout_marginTop="18dp"
        android:text="Weekly Progress"
        android:textSize="18sp" />

</RelativeLayout>